Converted header{H1..H3}Format to Selenium

--- a/test/assessmentSpecs/specs/headerH1Format/headerH1Format.html
+++ b/test/assessmentSpecs/specs/headerH1Format/headerH1Format.html
@@ -4,5 +4,6 @@
     <title>headerH1Format</title>
   </head>
   <body>
+    <h1 id="assert-1">With great tower, falls great gravity.</h1>
   </body>
 </html>
