Converted iframeMustNotHaveLongdesc to Selenium

--- a/test/assessmentSpecs/specs/iframeMustNotHaveLongdesc/iframeMustNotHaveLongdesc.html
+++ b/test/assessmentSpecs/specs/iframeMustNotHaveLongdesc/iframeMustNotHaveLongdesc.html
@@ -5,12 +5,10 @@
 </head>
 <body>
 	<div data-expected="fail">
-
-		<iframe longdesc="file.html" class="quail-failed-element"></iframe>
+		<iframe id="assert-1" longdesc="file.html"></iframe>
 	</div>
 	<div data-expected="pass">
-
-		<iframe></iframe>
+		<iframe id="assert-2"></iframe>
 	</div>
 
   </body>
