converted imageMapServerSide to Selenium

--- a/test/assessmentSpecs/specs/imageMapServerSide/imageMapServerSide.html
+++ b/test/assessmentSpecs/specs/imageMapServerSide/imageMapServerSide.html
@@ -6,13 +6,13 @@
 <body>
 	<div data-expected="fail">
 		<p>
-			<img src="../assets/map.png" ismap alt="map of the country" class="quail-failed-element"/>
+			<img id="assert-1" src="../assets/map.png" ismap alt="map of the country" class="quail-failed-element"/>
 		</p>
 	</div>
 
 	<div data-expected="pass">
 		<p>
-			<img src="../assets/map.png" alt="map of the country" />
+			<img id="assert-2" src="../assets/map.png" alt="map of the country" />
 		</p>
 		<p>
 			<a href="eastcoast.html">East Coast</a> |
