--- a/test/assessmentSpecs/specs/imgHasAlt/imgHasAlt.html
+++ b/test/assessmentSpecs/specs/imgHasAlt/imgHasAlt.html
@@ -4,21 +4,21 @@
     <title>imgHasAlt</title>
   </head>
   <body>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="imgHasAlt">
-      <img src="assets/rex.jpg" style="display:none" alt="My cat"/>
+    <div data-expected="pass">
+      <img id="assert-1" src="assets/rex.jpg" style="display:none" alt="My cat"/>
     </div>
 
     <div data-expected="pass">
-      <img src="assets/rex.jpg" alt="My cat"/>
+      <img id="assert-2" src="assets/rex.jpg" alt="My cat"/>
     </div>
 
     <div data-expected="fail">
-      <img src="assets/rex.jpg" class="quail-failed-element" />
+      <img id="assert-3" src="assets/rex.jpg" />
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="imgHasAlt">
+    <div data-expected="fail">
       <div style="display: none">
-        <img src="assets/rex.jpg" class="quail-failed-element" />
+        <img id="assert-4" src="assets/rex.jpg" />
       </div>
     </div>
   </body>
