Converted imgShouldNotHaveTitle to Selenium

--- a/test/assessmentSpecs/specs/imgShouldNotHaveTitle/imgShouldNotHaveTitle.html
+++ b/test/assessmentSpecs/specs/imgShouldNotHaveTitle/imgShouldNotHaveTitle.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<img src="../assets/rex.jpg" alt="A brown and black cat named Rex." title="Rex the bad cat" class="quail-failed-element"/>
+		<img id="assert-1" src="assets/rex.jpg" alt="A brown and black cat named Rex." title="Rex the bad cat" class="quail-failed-element"/>
 	</div>
 
 	<div data-expected="pass">
-		<img src="../assets/rex.jpg" alt="A brown and black cat named Rex." />
+		<img id="assert-2" src="assets/rex.jpg" alt="A brown and black cat named Rex." />
 	</div>
 
   </body>
