Converted imgWithMapHasUseMap to Selenium

--- a/test/assessmentSpecs/specs/imgWithMapHasUseMap/imgWithMapHasUseMap.html
+++ b/test/assessmentSpecs/specs/imgWithMapHasUseMap/imgWithMapHasUseMap.html
@@ -6,13 +6,13 @@
 <body>
 	<div data-expected="fail">
 		<p>
-			<img src="../assets/image.gif" alt="image map" ismap="ismap" class="quail-failed-element"/>
+			<img id="assert-1" src="assets/image.gif" alt="image map" ismap="ismap" />
 		</p>
 	</div>
 
 	<div data-expected="pass">
 		<p>
-			<img src="../assets/image.gif" alt="image map" ismap="ismap" usemap="#map1"/>
+			<img id="assert-2" src="assets/image.gif" alt="image map" ismap="ismap" usemap="#map1"/>
 		</p>
 	</div>
 
