--- a/test/assessmentSpecs/specs/inputElementsDontHaveAlt/inputElementsDontHaveAlt.html
+++ b/test/assessmentSpecs/specs/inputElementsDontHaveAlt/inputElementsDontHaveAlt.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html>
 <head>
-	<title>inputElementsDontHaveAlt</title>
+  <title>inputElementsDontHaveAlt</title>
 </head>
 <body>
-	<div data-expected="fail">
-		<form action="http://mysite.com">
-			<p>
-				<input type="submit" value="submit" alt="submit the form" class="quail-failed-element"/>
-			</p>
-		</form>
-	</div>
+  <div data-expected="fail">
+    <form action="http://mysite.com">
+      <p>
+        <input id="assert-1" type="submit" value="submit" alt="submit the form" />
+      </p>
+    </form>
+  </div>
 
-	<div data-expected="pass">
-		<form action="http://mysite.com">
-			<p>
-				<input type="submit" value="submit" />
-			</p>
-		</form>
-	</div>
+  <div data-expected="pass">
+    <form action="http://mysite.com">
+      <p>
+        <input id="assert-2" type="submit" value="submit" />
+      </p>
+    </form>
+  </div>
 
   </body>
 </html>
