--- a/test/assessmentSpecs/specs/inputImageHasAlt/inputImageHasAlt.html
+++ b/test/assessmentSpecs/specs/inputImageHasAlt/inputImageHasAlt.html
@@ -1,39 +1,26 @@
 <!doctype html>
 <html>
 <head>
-	<title>inputImageHasAlt</title>
+  <title>inputImageHasAlt</title>
 </head>
 <body>
-	<div data-expected="inapplicable"
-	data-accessibility-test="inputImageHasAlt">
+  <div data-expected="fail">
+    <form action="http://example.com/prog/text-read" method="post">
+      <p>
+        <!-- Providing a src value causes the tests to fail because the element is not available while the image loads. -->
+        <input id="assert-1" type="image" name="submit" src="" />
+      </p>
+    </form>
+  </div>
 
-	</div>
-
-	<div data-expected="inapplicable"
-	data-accessibility-test="inputImageHasAlt">
-		<input type="image" src="../assets/finddogs.gif"
-		style="display:none" />
-	</div>
-
-	<div data-expected="fail">
-		<form action="http://example.com/prog/text-read" method="post">
-			<p>
-				<!-- Providing a src value causes the tests to fail because the element is not available while the image loads. -->
-				<input type="image" name="submit"
-				src="" class="quail-failed-element"/>
-			</p>
-		</form>
-	</div>
-
-	<div data-expected="pass">
-		<form action="http://example.com/prog/text-read" method="post">
-			<p>
-				<!-- Providing a src value causes the tests to fail because the element is not available while the image loads. -->
-				<input type="image" name="submit"
-				src="" alt="Find Dogs"/>
-			</p>
-		</form>
-	</div>
+  <div data-expected="pass">
+    <form action="http://example.com/prog/text-read" method="post">
+      <p>
+        <!-- Providing a src value causes the tests to fail because the element is not available while the image loads. -->
+        <input id="assert-2" type="image" name="submit" src="" alt="Find Dogs"/>
+      </p>
+    </form>
+  </div>
 
   </body>
 </html>
