Converted liDontUseImageForBullet to Selenium

--- a/test/assessmentSpecs/specs/liDontUseImageForBullet/liDontUseImageForBullet.html
+++ b/test/assessmentSpecs/specs/liDontUseImageForBullet/liDontUseImageForBullet.html
@@ -7,12 +7,8 @@
   <div data-expected="fail">
     <p>
       <ul>
-        <li class="quail-failed-element">
+        <li id="assert-1">
           <img src="../assets/bullet.png">This is item one</li>
-        <li class="quail-failed-element">
-          <img src="../assets/bullet.png">This is item two</li>
-        <li class="quail-failed-element">
-          <img src="../assets/bullet.png">This is item three</li>
       </ul>
     </p>
   </div>
@@ -20,9 +16,7 @@
   <div data-expected="pass">
     <p>
       <ul>
-        <li>This is item one</li>
-        <li>This is item two</li>
-        <li>This is item three</li>
+        <li id="assert-2">This is item one</li>
       </ul>
     </p>
   </div>
