Converted menuNotUsedToFormatText to Selenium

--- a/test/assessmentSpecs/specs/menuNotUsedToFormatText/menuNotUsedToFormatText.html
+++ b/test/assessmentSpecs/specs/menuNotUsedToFormatText/menuNotUsedToFormatText.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html>
-<head>
-	<title>menuNotUsedToFormatText</title>
-</head>
-<body>
-	<div data-expected="fail">
-		<menu class="quail-failed-element">
-			<li>some text</li>
-		</menu>
-	</div>
-
-	<div data-expected="pass"></div>
-
+  <head>
+    <title>menuNotUsedToFormatText</title>
+  </head>
+  <body>
+    <div data-expected="fail">
+      <menu id="assert-1">
+        <li>some text</li>
+      </menu>
+    </div>
   </body>
 </html>
