--- a/test/accessibility-tests/colorBackgroundGradientContrast.html
+++ b/test/accessibility-tests/colorBackgroundGradientContrast.html
@@ -28,7 +28,7 @@
       color: #fff;
       padding: 10px;
       background-image: -webkit-linear-gradient(to right, #ff0000, #f06d06, #ffff00, #008000);
-      background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ff0000), color-stop(25%,#f06d06), color-stop(25%,#f06d06), color-stop(50%,#ffff00), color-stop(75%,#008000), color-stop(100%,#008000));
+      background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,#ff0000), color-stop(25%,#f06d06), color-stop(25%,#f06d06), color-stop(50%,#ffff00), color-stop(75%,#008000), color-stop(100%,#008000));
       background-image: -moz-linear-gradient(to right, #ff0000, #f06d06, #ffff00, #008000);
       background-image: -o-linear-gradient(to right, #ff0000, #f06d06, #ffff00, #008000);
       background-image: -ms-linear-gradient(to right, #ff0000, #f06d06, #ffff00, #008000);
