--- a/test/assessmentSpecs/specs/objectMustHaveEmbed/objectMustHaveEmbed.html
+++ b/test/assessmentSpecs/specs/objectMustHaveEmbed/objectMustHaveEmbed.html
@@ -5,23 +5,16 @@
 </head>
 <body>
     <div data-expected="fail">
-        <object classid="clsid:A12BCD3F-GH4I-56JK-xyz" codebase="http://example.com/content.cab"
-        width="100" height="80" class="quail-failed-element">
-            <param name="Movie" value="moviename.swf" />
-        </object>
+      <object id="assert-1" classid="clsid:A12BCD3F-GH4I-56JK-xyz" codebase="http://example.com/content.cab" width="100" height="80">
+        <param name="Movie" value="moviename.swf" />
+      </object>
     </div>
 
     <div data-expected="pass">
-        <object classid="clsid:A12BCD3F-GH4I-56JK-xyz" codebase="http://example.com/content.cab"
-        width="100" height="80">
-            <param name="Movie" value="moviename.swf" />
-            <embed src="moviename.swf" width="100" height="80" pluginspage="http://example.com/shockwave/download/">
-            <noembed>
-                <img alt="Still from Movie" "../assets/moviename.gif" width="100" height="80"
-                />
-            </noembed>
-        </embed>
-    </object>
-</div>
+      <object id="assert-2" classid="clsid:A12BCD3F-GH4I-56JK-xyz" codebase="http://example.com/content.cab" width="100" height="80">
+        <param name="Movie" value="moviename.swf" />
+        <embed src="moviename.swf" width="100" height="80" pluginspage="http://example.com/shockwave/download/"></embed>
+      </object>
+  </div>
   </body>
 </html>
