Converted objectMustHaveTitle to Selenium

--- a/test/assessmentSpecs/specs/objectMustHaveTitle/objectMustHaveTitle.html
+++ b/test/assessmentSpecs/specs/objectMustHaveTitle/objectMustHaveTitle.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<object classid="http://www.miamachina.it/analogclock.py" class="quail-failed-element">
+		<object id="assert-1" classid="http://www.miamachina.it/analogclock.py">
 			The text equivalent for the object should go here.
 		</object>
 	</div>
 
 	<div data-expected="pass">
-		<object classid="http://www.miamachina.it/analogclock.py" title="a clock object">
+		<object id="assert-2" classid="http://www.miamachina.it/analogclock.py" title="a clock object">
 			The text equivalent for the object should go here.
 		</object>
 	</div>
