--- a/test/assessmentSpecs/specs/svgContainsTitle/svgContainsTitle.html
+++ b/test/assessmentSpecs/specs/svgContainsTitle/svgContainsTitle.html
@@ -1,37 +1,42 @@
 <!doctype html>
 <html>
-<head>
-    <title>svgContainsTitle</title>
-</head>
-<body>
+  <head>
+      <title>svgContainsTitle</title>
+  </head>
+  <body>
     <div data-expected="fail">
-        <svg xmlns="http://www.w3.org/2000/svg"
-        version="1.1" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice"
-        style="width:100%; height:100%; position:absolute; top:0; left:0; z-index:-1;" class="quail-failed-element">
-            <linearGradient id="gradient">
-                <stop class="begin" offset="0%" />
-                <stop class="end" offset="100%" />
-            </linearGradient>
-            <rect x="0" y="0" width="100" height="100" style="fill:url(#gradient)"
-            />
-            <circle cx="50" cy="50" r="30" style="fill:url(#gradient)" />
-        </svg>
+      <svg
+        id="assert-1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 100 100"
+        preserveAspectRatio="xMidYMid slice"
+        style="width:100%; height:100%; position:absolute; top:0; left:0; z-index:-1;">
+          <linearGradient id="gradient">
+            <stop class="begin" offset="0%" />
+            <stop class="end" offset="100%" />
+          </linearGradient>
+          <rect x="0" y="0" width="100" height="100" style="fill:url(#gradient)" />
+          <circle cx="50" cy="50" r="30" style="fill:url(#gradient)" />
+      </svg>
     </div>
 
     <div data-expected="pass">
-        <svg xmlns="http://www.w3.org/2000/svg"
-        version="1.1" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice"
+      <svg
+        id="assert-2"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 100 100"
+        preserveAspectRatio="xMidYMid slice"
         style="width:100%; height:100%; position:absolute; top:0; left:0; z-index:-1;">
-            <title>An example SVG file</title>
-            <linearGradient id="gradient">
-                <stop class="begin" offset="0%" />
-                <stop class="end" offset="100%" />
-            </linearGradient>
-            <rect x="0" y="0" width="100" height="100" style="fill:url(#gradient)"
-            />
-            <circle cx="50" cy="50" r="30" style="fill:url(#gradient)" />
-        </svg>
+          <title>An example SVG file</title>
+          <linearGradient id="gradient">
+            <stop class="begin" offset="0%" />
+            <stop class="end" offset="100%" />
+          </linearGradient>
+          <rect x="0" y="0" width="100" height="100" style="fill:url(#gradient)" />
+          <circle cx="50" cy="50" r="30" style="fill:url(#gradient)" />
+      </svg>
     </div>
-
-    </body>
+  </body>
 </html>
