Converted tableDataShouldHaveTh to Selenium

--- a/test/assessmentSpecs/specs/tableDataShouldHaveTh/tableDataShouldHaveTh.html
+++ b/test/assessmentSpecs/specs/tableDataShouldHaveTh/tableDataShouldHaveTh.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div data-expected="fail">
-        <table border="1" class="quail-failed-element">
+        <table id="assert-1" border="1">
             <tr>
                 <td>name</td>
                 <td>number of cups</td>
@@ -46,7 +46,7 @@
     </div>
 
     <div data-expected="pass">
-        <table border="1">
+        <table id="assert-2" border="1">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
