--- a/test/assessmentSpecs/specs/tableUsesCaption/tableUsesCaption.html
+++ b/test/assessmentSpecs/specs/tableUsesCaption/tableUsesCaption.html
@@ -6,7 +6,7 @@
 <body>
     <div data-expected="fail">
 
-        <table border="1" class="quail-failed-element">
+        <table id="assert-1" border="1">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -47,7 +47,7 @@
     </div>
     <div data-expected="pass">
 
-        <table border="1">
+        <table id="assert-2" border="1">
             <caption>Coffee Consumed By Senators</caption>
             <tr>
                 <th>name</th>
