--- a/test/assessmentSpecs/specs/headerH3/headerH3.html
+++ b/test/assessmentSpecs/specs/headerH3/headerH3.html
@@ -1,29 +1,29 @@
 <!doctype html>
 <html>
 <head>
-	<title>headerH3</title>
+  <title>headerH3</title>
 </head>
 <body>
-	<div data-expected="h3:ignore|h5:fail" data-accessibility-test="headerH3">
+  <div data-expected="fail">
 
-		<h3>The First Heading</h3>
+    <h3>The First Heading</h3>
 
-		<p>Here is some demo text.</p>
+    <p>Here is some demo text.</p>
 
-		<h5 class="quail-failed-element">The bad Heading</h5>
+    <h5 id="assert-1">The bad Heading</h5>
 
-		<p>Here is some more demo text.</p>
-	</div>
-	<div data-expected="h3:ignore|h4:pass" data-accessibility-test="headerH3">
+    <p>Here is some more demo text.</p>
+  </div>
+  <div data-expected="pass">
 
-		<h3>The First Heading</h3>
+    <h3>The First Heading</h3>
 
-		<p>Here is some demo text.</p>
+    <p>Here is some demo text.</p>
 
-		<h4>This Heading Is OK</h4>
+    <h4 id="assert-2">This Heading Is OK</h4>
 
-		<p>Here is some more demo text.</p>
-	</div>
+    <p>Here is some more demo text.</p>
+  </div>
 
   </body>
 </html>
