Converted animatedGifMayBePresent to Selenium

--- a/test/assessmentSpecs/specs/animatedGifMayBePresent/animatedGifMayBePresent.html
+++ b/test/assessmentSpecs/specs/animatedGifMayBePresent/animatedGifMayBePresent.html
@@ -5,17 +5,15 @@
   </head>
   <body>
     <div data-expected="inapplicable">
-      <img src="../assets/kids.jpg" alt="eat at Joes" width="200" height="200"/>
+      <img id="assert-1" src="assets/kids.jpg" alt="eat at Joes" width="200" height="200"/>
     </div>
 
     <div data-expected="inapplicable">
-
-      <img src="../assets/fish.gif" alt="eat at Joes" width="200" height="200"/>
+      <img id="assert-2" src="assets/fish.gif" alt="eat at Joes" width="200" height="200"/>
     </div>
 
     <div data-expected="cantTell">
-      <img src="../assets/fishswim.gif" alt="A brown and black cat named Rex."/>
+      <img id="assert-3" src="assets/fishswim.gif" alt="A brown and black cat named Rex."/>
     </div>
-
-      </body>
+  </body>
 </html>
